# rsl

./: .gitignore  CHANGES  Makefile.am  Makefile.in  README  README.md  THANKS  aclocal.m4  anyformat_to_radar.c  config.h.in  configure  configure.in  dorade_to_radar.c  gzip.c  mcgill.c  mcgill_to_radar.c  nsig.c  nsig.h  nsig_to_radar.c  radar_to_uf.c  rainbow_to_radar.c  range.c  rapic.c  rsl-v1.49.tar  rsl-v1.50.tar  rsl.h  uf_to_radar.c  wsr88d.c  wsr88d.h  wsr88d_align_split_cut_rays.c  wsr88d_m31.c  wsr88d_merge_split_cuts.c  wsr88d_remove_sails_sweep.c  wsr88d_to_radar.c
colors/: Makefile.in
decode_ar2v/: Makefile  Makefile.in  configure  configure.in  decode_ar2v.c
doc/: Makefile.in  RSL_anyformat_to_radar.html  RSL_radar_header_struct.html  RSL_radar_intro.html  RSL_ray_header_struct.html  RSL_wsr88d_asis.html  RSL_wsr88d_keep_sails.html  RSL_wsr88d_keep_short_refl.html  functionality_index.html  index.html  quick_ref.html  whats_new.html
examples/: Makefile.in  any_to_gif.c  any_to_uf.c  any_to_ufgz.c  bscan.c  cappi_image.c  killer_sweep.c  kwaj_subtract_one_day.c  print_hash_table.c  print_header_info.c  qlook.c  sector.c  test_get_win.c  wsr_hist_uf_test.c
wsr88d_decode_ar2v/: Makefile.am  Makefile.in
